--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Application settings / secrets
+.config
+todo.txt
+
+# Pelican defaults
+themes/simple/
+themes/notmyidea/
+output/*
+!output/.keep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
