--- a/metalsmith/package.json
+++ b/metalsmith/package.json
@@ -7,7 +7,12 @@
   "author": "David Timmons",
   "license": "CC BY-NC 4.0",
   "private": true,
-  "devDependencies": {
-    "metalsmith": "^2.3.0"
+  "dependencies": {
+    "handlebars": "^4.0.11",
+    "metalsmith": "^2.3.0",
+    "metalsmith-debug": "^1.1.0",
+    "metalsmith-drafts": "^0.0.1",
+    "metalsmith-layouts": "^1.8.1",
+    "metalsmith-markdown": "^0.2.1"
   }
 }
