--- a/metalsmith/package.json
+++ b/metalsmith/package.json
@@ -7,12 +7,21 @@
   "author": "David Timmons",
   "license": "CC BY-NC 4.0",
   "private": true,
+  "scripts": {
+    "build": "node index.js",
+    "convert": "./utilities/convert_meta_to_yaml.sh",
+    "debug": "DEBUG=metalsmith:* node index.js"
+  },
   "dependencies": {
+    "debug": "^3.1.0",
     "handlebars": "^4.0.11",
     "metalsmith": "^2.3.0",
     "metalsmith-debug": "^1.1.0",
+    "metalsmith-default-values": "^2.0.0",
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-layouts": "^1.8.1",
-    "metalsmith-markdown": "^0.2.1"
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.5.0",
+    "multimatch": "^2.1.0"
   }
 }
