--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-layouts": "^1.8.1",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-pagination": "^1.4.0",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sitemap": "^1.2.0",
     "moment": "^2.19.2",
