--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-pagination": "^1.4.0",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-preview": "^1.0.2",
     "metalsmith-sitemap": "^1.2.0",
     "moment": "^2.19.2",
     "multimatch": "^2.1.0"
