--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "metalsmith-debug": "^1.1.0",
     "metalsmith-default-values": "^2.0.0",
     "metalsmith-drafts": "^0.0.1",
+    "metalsmith-inject-metadata": "^1.0.1",
     "metalsmith-layouts": "^1.8.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-pagination": "^1.4.0",
